--- a/module3-cross-validation/LS_DS_223_assignment.ipynb
+++ b/module3-cross-validation/LS_DS_223_assignment.ipynb
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,19 +107,184 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
     "# Merge train_features.csv & train_labels.csv\n",
-    "train = pd.merge(pd.read_csv(DATA_PATH+'waterpumps/train_features.csv'), \n",
-    "                 pd.read_csv(DATA_PATH+'waterpumps/train_labels.csv'))\n",
+    "train = pd.merge(pd.read_csv(DATA_PATH+'waterpumps/train_features.csv',\n",
+    "                             na_values=[0, -2.000000e-08],\n",
+    "                            parse_dates=['date_recorded']), \n",
+    "                 pd.read_csv(DATA_PATH+'waterpumps/train_labels.csv')).set_index('id')\n",
     "\n",
     "# Read test_features.csv & sample_submission.csv\n",
-    "test = pd.read_csv(DATA_PATH+'waterpumps/test_features.csv')\n",
+    "test = pd.read_csv(DATA_PATH+'waterpumps/test_features.csv',\n",
+    "                   parse_dates=['date_recorded'],\n",
+    "                   na_values=[0, -2.000000e-08])\n",
     "sample_submission = pd.read_csv(DATA_PATH+'waterpumps/sample_submission.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# WRANGLE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def wrangle(X):\n",
+    "\n",
+    "  #Make a copy\n",
+    "  X = X.copy()\n",
+    "\n",
+    "  #Create yr_recorded column\n",
+    "  X['yr_recorded'] = X['date_recorded'].dt.year\n",
+    "\n",
+    "  ## Feature Engineering\n",
+    "  X['pump_age'] = X['yr_recorded'] - X['construction_year']\n",
+    "  X['tsh_per_person'] = X['amount_tsh'] / X['population']\n",
+    "  X['tsh_by_height'] = X['amount_tsh'] / X['gps_height']\n",
+    "\n",
+    "  #Column list to remove\n",
+    "  columns=['date_recorded', 'recorded_by', 'quality_group', 'extraction_type_group']\n",
+    "  X = X.drop(columns=columns)\n",
+    "\n",
+    "  return X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train = wrangle(train)\n",
+    "X_test = wrangle(test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# SPLIT"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "NO NEED TO SPLIT, USING CV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target = 'status_group'\n",
+    "y = train[target]\n",
+    "X = train.drop(columns=target)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# BASELINE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Baseline Accuracy: 0.5430899510092763\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Baseline Accuracy:', y.value_counts(normalize=True).max())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# BUILD MODEL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from category_encoders import OrdinalEncoder\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.pipeline import make_pipeline\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.model_selection import cross_val_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rf = make_pipeline(\n",
+    "    OrdinalEncoder(),\n",
+    "    SimpleImputer(),\n",
+    "    RandomForestClassifier(random_state=42, n_jobs=-1)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rf_scores = cross_val_score(rf, X, y, cv=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8085825919208357"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rf_scores.mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# TUNE"
    ]
   },
   {
@@ -146,7 +311,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
